--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,12 @@ services:
         restart: true
 
   db:
-    image: mariadb:latest
-    ports:
-      - 3306
-    healthcheck:
-      test: "pwd"
+    image: postgres:alpine
+    environment:
+      - POSTGRES_DB=animal
+      - POSTGRES_USER=maria
+      - POSTGRES_HOST_AUTH_METHOD=trust
     volumes:
       - ./db/sql:/docker-entrypoint-initdb.d
-    environment:
-      - MYSQL_ALLOW_EMPTY_PASSWORD=true
-      - MYSQL_USER=maria
-      - MYSQL_PASSWORD=pass
+    healthcheck:
+      test: "pwd"
